Added assembly definitions, moved fbx export to editor

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "com.houkii.ezroomgenerator",
   "version": "0.1.0",
-  "displayName": "EZ Room Gen",
-  "description": "A Unity editor and runtime tool for generating rooms procedurally using a customizable grid layout. Requires FBX Exporter (com.unity.formats.fbx).",
+  "displayName": "EZ Room Generator",
+  "description": "A Unity editor and runtime tool for generating rooms procedurally using a customizable grid layout.",
   "unity": "6000.0",
   "keywords": [
     "procedural",
     "generation",
     "room",
     "level",
+    "dungeon",
+    "maze",
     "editor",
     "fbx"
   ],
